--- a/app/elements/processing-service/processing-service.html
+++ b/app/elements/processing-service/processing-service.html
@@ -509,7 +509,7 @@
             obj.hidecashparticular=false;
             obj.hidechequeparticular=true;
             obj.hidetransferparticular=true;
-
+            obj.hidesplit=true;
             cashtotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(cashtotal)).toFixed(2);
             cashparticular.push({"slno":cashno,"installment":paymentarr[i].installment_type,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
@@ -552,7 +552,7 @@
             obj.hidecashparticular=false;
             obj.hidechequeparticular=true;
             obj.hidetransferparticular=true;
-
+            obj.hidesplit=true;
             tptotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(cashtotal)).toFixed(2);
             tpparticular.push({"slno":tpno,"installment":paymentarr[i].installment_type,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
@@ -595,7 +595,7 @@
             obj.hidecashparticular=true;
             obj.hidechequeparticular=false;
             obj.hidetransferparticular=true;
-
+            obj.hidesplit=true;
             chequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(chequetotal)).toFixed(2);
             chequeparticular.push({"slno":chequeno,"installment":paymentarr[i].installment_type,"bankname":paymentarr[i].bank_name,"chequeno":paymentarr[i].cheque_no,"chequedate":paymentarr[i].installment_date,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
@@ -634,7 +634,7 @@
             obj.hidecashparticular=true;
             obj.hidechequeparticular=false;
             obj.hidetransferparticular=true;
-            
+            obj.hidesplit=true;
             chequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(chequetotal)).toFixed(2);
             chequeparticular.push({"slno":chequeno,"installment":paymentarr[i].installment_type,"bankname":paymentarr[i].bank_name,"chequeno":paymentarr[i].cheque_no,"chequedate":paymentarr[i].installment_date,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
@@ -674,7 +674,7 @@
             obj.hidecashparticular=true;
             obj.hidechequeparticular=true;
             obj.hidetransferparticular=false;
-
+            obj.hidesplit=true;
             transfertotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(transfertotal)).toFixed(2);
             transferparticular.push({"slno":transferno,"installment":paymentarr[i].installment_type,"bankname":paymentarr[i].bank_name,"referenceno":paymentarr[i].reference_no,"receiveddate":paymentarr[i].received_date,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
@@ -822,7 +822,7 @@
             obj.hidecashparticular=false;
             obj.hidechequeparticular=true;
             obj.hidetransferparticular=true;
-
+            
             cashtotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(cashtotal)).toFixed(2);
             cashparticular.push({"slno":cashno,"installment":paymentarr[i].installment_type,"installmentamount":paymentarr[i].installment_amount,"feetype":paymentarr[i].fees});
             for(var j=i+1;j<paymentarr.length;j++){
