--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -246,6 +246,11 @@
               <notpaid-report></notpaid-report>
             </div>
           </section>
+          <section data-category="neevcollection-report">
+            <div class="col-md-12">
+              <neevcollection-report></neevcollection-report>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
