--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -439,6 +439,7 @@
         document.querySelector('daycollection-report').gradearr=gradearr;
         document.querySelector('notpaid-report').gradearr=gradearr;
         document.querySelector('notpaid-report').FnSetArray(gradearr);
+        document.querySelector('neevcollection-report').gradearr=gradearr;
       },
       fetchgradeService:function(){       
         this.fetchgradeurl=sessionStorage.getItem("addrinfo")+"/fetchgrade-service"
