--- a/app/elements/neevcollection-report/neevcollection-report.html
+++ b/app/elements/neevcollection-report/neevcollection-report.html
@@ -1,7 +1,7 @@
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
 
-<dom-module id="daycollection-report">
+<dom-module id="neevcollection-report">
   <template>
     <style>
       .datecard {
@@ -21,7 +21,7 @@
                 <!-- </div> -->
                 <div class="col-sm-2" style="margin-left: 5%;">
                 <paper-dropdown-menu label="Grade" attr-for-selected="value">
-                  <paper-menu id="daycollectiongrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
+                  <paper-menu id="tpcollectiongrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
                     <template  is="dom-repeat" items="{{gradearr}}" as="item">
                     <paper-item value="{{item.grade_id}}">{{item.grade_name}}</paper-item>
                     </template>
@@ -44,7 +44,7 @@
                 <div class="col-md-1" style="margin-top: 2%;margin-left: 10%;">
                 <p>Download
                 <a href="#">
-                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('daycollectionreport', 'Daily Collection')"></span>
+                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('tpcollectionreportt', 'Thirdparty Collection')"></span>
                 </a>
                 </p>
                 </div> 
@@ -54,27 +54,23 @@
           </div>
         </div>
     </div>
-    <div id="daycollectionreport">
+    <div id="tpcollectionreportt">
      <table class="table table-hover">
       <thead>
       <tr>
         <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th>
-        <th>Type</th><th>Installment Type</th><th>Mode Of Payment</th><th>Cheque No</th><th>Bank Name</th><th>Cheque Date</th><th>Received Date</th><th>Receipt/Ack No</th><th>Actual Amount</th><th>Fine Amount</th><th>Adhoc Amount</th><th>Total Amount</th>
+        <th>Installment Type</th><th>Reference No</th><th>Received Date</th><th>Received Amount</th>
       </tr>
       </thead>
       <tbody>
-      <template  is="dom-repeat" items="{{daycollectionarr}}" as="item">
-        <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.grade}}</td><td>{{item.admission_status}}</td>
-        <td>{{item.installment_type}}</td><td>{{item.mode_of_payment}}</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.paid_date}}</td>
-        <td>{{item.receipt_no}}</td><td>{{item.installment_amount}}</td><td>{{item.fine_amount}}</td><td>{{item.adhoc_discount}}</td><td>{{item.total}}</td></tr>
+      <template  is="dom-repeat" items="{{tpcollectionarr}}" as="item">
+        <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.grade}}</td>
+        <td>{{item.installment}}</td><td>{{item.reference_no}}</td><td>{{item.installment_date}}</td><td>{{item.installment_amount}}</td></tr>
       </template>
       <tr></tr>
       </tbody>
     </table>  
     <table>
-      <tr hidden$="{{hidetotal}}"><th colspan="8" style="text-align: right;">Total amount from CASH: &nbsp;&nbsp;</th><th>{{cashamount}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from CHEQUE: &nbsp;&nbsp;</th><th>{{chequeamount}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from NEFT/RTGS: &nbsp;&nbsp;</th><th>{{transferamount}}</th></tr>
       <tr><th colspan="8" style="text-align: right;">Grand Total: &nbsp;&nbsp;</th><th>{{totalamount}}</th></tr>
     </table>  
     </div>
@@ -99,7 +95,7 @@
     var grade="All Grades";
     
     Polymer({
-      is: 'daycollection-report',
+      is: 'neevcollection-report',
       ready:function(){
         this.hidetotal=true;
       },
@@ -107,18 +103,18 @@
         this.hidetotal=false;
       },
       FnCallService:function(){        
-        this.$.feereportservice.FnFetchDayCollectionService(grade);
+        this.$.feereportservice.FnFetchTPCollectionService(grade);
       },
       FnView:function(){
-        this.$.feereportservice.FnFetchDayCollectionService(grade);
+        this.$.feereportservice.FnFetchTPCollectionService(grade);
       },
       FnSelectGrade:function(e){
         grade=(e.target.selectedItem.textContent).trim();
       },
       FnRefresh:function(){
-        document.querySelector('#daycollectiongrade').selected=-1;
+        document.querySelector('#tpcollectiongrade').selected=-1;
         // document.querySelector('#reportfiltertype').selected=-1;
-        this.daycollectionarr="";
+        this.tpcollectionarr="";
         document.querySelector('fromdate-icon-pickercard').ready();
         // document.querySelector('todate-icon-pickercard').ready();
         this.hidetotal=true;
