--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -199,13 +199,14 @@
     var studstructure=[];
     Polymer({
       is: 'fee-report-service',
-      FnFetchDayCollectionService:function(grade){
+      FnFetchDayCollectionService:function(grade,type){
         this.daycollectionurl=sessionStorage.getItem("addrinfo")+"/daycollection-service";
         var obj={"schoolid":"","fromdate":"","todate":""};
         obj.schoolid=localStorage.getItem("schoolid");
         obj.fromdate=localStorage.getItem("localsess_from_date");
         // obj.todate=localStorage.getItem("localsess_to_date");
         obj.grade=grade;
+        obj.type=type;
         this.daycollectionparam=obj;
         this.$.daycollectionajax.generateRequest();
       },
