--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -379,6 +379,7 @@
         obj.chequedate=transfer[i].chequedate;
         obj.feetransfercount=feetransfercount; 
         obj.fineamount=0;
+        // alert(obj.chequedate);
         obj.receiveddate=localStorage.getItem("curr_sess_date");         
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
