--- a/app/elements/custompattern-installment-card/custompattern-installment-card.html
+++ b/app/elements/custompattern-installment-card/custompattern-installment-card.html
@@ -344,7 +344,8 @@
             obj.referenceno=this.chequeno;
             obj.bankname=this.bankname;            
             obj.receiveddate=localStorage.getItem("curr_sess_installmentdate");   
-            obj.paiddate=localStorage.getItem("curr_sess_chequedate");            
+            obj.paiddate=localStorage.getItem("curr_sess_chequedate");
+            obj.chequedate=localStorage.getItem("curr_sess_installmentdate");            
             obj.paidstatus="paid";
             obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
             // alert(localStorage.getItem("curr_sess_receiptdate"));
@@ -564,7 +565,8 @@
             obj.referenceno=this.chequeno;
             obj.bankname=this.bankname;            
             obj.receiveddate=localStorage.getItem("curr_sess_installmentdate");   
-            obj.paiddate=localStorage.getItem("curr_sess_chequedate");            
+            obj.paiddate=localStorage.getItem("curr_sess_chequedate");
+            obj.chequedate=localStorage.getItem("curr_sess_installmentdate");            
             obj.paidstatus="paid";
             obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
             // alert(localStorage.getItem("curr_sess_receiptdate"));
