--- a/app/elements/installment-card/installment-card.html
+++ b/app/elements/installment-card/installment-card.html
@@ -356,7 +356,8 @@
             obj.referenceno=this.chequeno;
             obj.bankname=this.bankname;            
             obj.receiveddate=localStorage.getItem("curr_sess_installmentdate");   
-            obj.paiddate=localStorage.getItem("curr_sess_chequedate");            
+            obj.paiddate=localStorage.getItem("curr_sess_chequedate");
+            obj.chequedate=localStorage.getItem("curr_sess_installmentdate");            
             obj.paidstatus="paid";
             obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
             // alert(localStorage.getItem("curr_sess_receiptdate"));
@@ -576,7 +577,9 @@
             obj.referenceno=this.chequeno;
             obj.bankname=this.bankname;            
             obj.receiveddate=localStorage.getItem("curr_sess_installmentdate");   
-            obj.paiddate=localStorage.getItem("curr_sess_chequedate");            
+            obj.chequedate=localStorage.getItem("curr_sess_installmentdate");
+            // alert(obj.chequedate);
+
             obj.paidstatus="paid";
             obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
             // alert(localStorage.getItem("curr_sess_receiptdate"));
