preapp altert removed and fee report range

--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -204,7 +204,7 @@
         var obj={"schoolid":"","fromdate":"","todate":""};
         obj.schoolid=localStorage.getItem("schoolid");
         obj.fromdate=localStorage.getItem("localsess_from_date");
-        // obj.todate=localStorage.getItem("localsess_to_date");
+        obj.todate=localStorage.getItem("localsess_to_date");
         obj.grade=grade;
         obj.type=type;
         this.daycollectionparam=obj;
