--- a/app/elements/pre-apps/pre-apps.html
+++ b/app/elements/pre-apps/pre-apps.html
@@ -1455,7 +1455,7 @@
         // var place = (str_array.length)-3;
         this.textvalue = "Location: "+place;
         this.closeWindow();
-        this.getstudentsinlocation(place);
+        // this.getstudentsinlocation(place);
       }
     });
   })();
