--- a/app/elements/daycollection-report/daycollection-report.html
+++ b/app/elements/daycollection-report/daycollection-report.html
@@ -16,9 +16,9 @@
               <div class="col-md-2" style="margin-top: 2%;">
                   <fromdate-icon-pickercard></fromdate-icon-pickercard>
                 </div>
-                <!-- <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;"> -->
-                  <!-- <todate-icon-pickercard></todate-icon-pickercard> -->
-                <!-- </div> -->
+                <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;">
+                  <todate-icon-pickercard></todate-icon-pickercard>
+                </div>
                 <div class="col-sm-2" style="margin-left: 5%;">
                 <paper-dropdown-menu label="Grade" attr-for-selected="value">
                   <paper-menu id="daycollectiongrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
@@ -49,7 +49,7 @@
                   </paper-menu>
                 </paper-dropdown-menu> 
                 </div> 
-                <div class="col-md-1" style="margin-top: 2.5%;margin-left: 10%;">
+                <div class="col-md-1" style="margin-top: 2.5%;margin-left: 5%;">
                   <paper-button style="height:30px;text-transform: none;" on-click="FnView" class="btn btn-primary">View</paper-button>
                 </div>
                 <div class="col-md-1" style="margin-top: 2%;margin-left: 10%;">
@@ -76,7 +76,7 @@
       <tbody>
       <template  is="dom-repeat" items="{{daycollectionarr}}" as="item">
         <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.grade}}</td><td>{{item.admission_status}}</td>
-        <td>{{item.installment_type}}</td><td>{{item.mode_of_payment}}</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.paid_date}}</td>
+        <td>{{item.installment_type}}</td><td>{{item.mode_of_payment}}</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.received_date}}</td>
         <td>{{item.receipt_no}}</td><td>{{item.installment_amount}}</td><td>{{item.fine_amount}}</td><td>{{item.adhoc_discount}}</td><td>{{item.total}}</td></tr>
       </template>
       <tr></tr>
